<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="always"/>
    <item android:id="@+id/item_localization"
        android:icon="@drawable/ic_location_searching_black_24dp"
        android:title="@string/localization"
        app:showAsAction="always"/>
    <item android:id="@+id/item_contacts"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/contact_list"
        app:showAsAction="always"/>
    <item android:id="@+id/item_contacts_loader"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/contact_list"
        app:showAsAction="always"/>
</menu>