<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_role_choose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.teenguard.child.activity.RoleChooseActivity">

    <TextView
        android:text="@string/str_used_by"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/light_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/textView4"
        tools:text="@string/str_used_by" />

    <TextView
        android:text="@string/str_child"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/light_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/image_child"
        android:layout_marginEnd="14dp"
        android:id="@+id/textView9"
        tools:text="@string/str_child" />

    <TextView
        android:text="@string/str_parent"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/light_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/image_parent"
        android:layout_alignStart="@+id/image_parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_device_parent"
        android:id="@+id/image_parent"
        android:layout_alignTop="@+id/image_child"
        android:layout_marginEnd="120dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_device_child"
        android:layout_marginTop="50dp"
        android:id="@+id/image_child"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
